# month

./: .bazelrc  .gitignore  .prettierignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE.bazel  mix.exs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
ansible/: inventory.yaml  pull.yaml  push.yaml
assets/: BUILD.bazel
assets/css/: BUILD.bazel  style.scss
assets/img/: BUILD.bazel
assets/js/: BUILD.bazel  app.ts  mc.js  month-effect.ts  snowflake.ts  tennis-effect.ts  tetris-effect.ts  tsconfig.json
assets/js/month/: app.ts  const.ts  game.ts  index.ts  template.ts
assets/js/snowflake/: BUILD.bazel  canvas.ts
assets/js/tennis/: BUILD.bazel  const.ts  index.ts  native.ts  screen.ts  server.ts  speech.ts  template.ts  tepmplate.ts
assets/js/tetris/: BUILD.bazel  field.ts  figure.ts  tetris.ts
assets/js/utils/: BUILD.bazel  bind.ts  canvas.ts  cont.ts  dom.ts  index.ts  maybe.ts  observer.ts  random.ts
assets/src/: BUILD.bazel  app.ts  snowflake.ts  utils.ts
assets/src/snowflake/: BUILD.bazel  canvas.ts  index.ts  snowflake.ts
assets/src/tetris/: BUILD.bazel  field.ts  figure.ts  index.ts  tetris.ts
assets/src/utils/: BUILD.bazel  bind.ts  canvas.ts  cont.ts  index.ts  observer.ts  random.ts
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: whatAmonth.ex  whatAmonth_web.ex
lib/whatAmonth/: application.ex
lib/whatAmonth_web/: endpoint.ex  router.ex  telemetry.ex
lib/whatAmonth_web/channels/: user_socket.ex
lib/whatAmonth_web/controllers/: base64_page_controller.ex  ecomm_page_controller.ex  main_page_controller.ex  month_page_controller.ex  page_controller.ex  random_page_controller.ex  test_controller.ex  tetris_page_controller.ex
lib/whatAmonth_web/templates/layout/: app.html.eex
lib/whatAmonth_web/templates/main_layout/: main.html.eex
lib/whatAmonth_web/templates/main_page/: index.html.eex
lib/whatAmonth_web/templates/month_page/: base64.html.eex  ecomm.html.eex  index.html.eex  random.html.eex
lib/whatAmonth_web/templates/page/: index.html.eex
lib/whatAmonth_web/views/: error_helpers.ex  error_view.ex  helpers.ex  layout_view.ex  main_layout.ex  main_page_view.ex  month_page_view.ex  page_view.ex
priv/static/css/: app.css  phoenix.css  style.css
script/: docker.js
server/: .gitignore  BUILD.bazel  Cargo.toml  README.md  flake.nix
server/db/: BUILD.bazel  main.db
server/src/: app.rs  db.rs  main.rs
server/src/pages/: base64.rs  main_page.rs  mod.rs  months.rs  random.rs  slugify.rs  some_js_pages.rs  tetris.rs  utils.rs
server/static/: BUILD.bazel
server/static/css/: phoenix.css  style.css
server/static/js/: app.js  bundle.min.js
server/templates/: BUILD.bazel  base.html  base64.html  image.html  inner.html  js_bundle_page.html  main.html  months.html  random.html  slugify.html  tetris.html
test/support/: channel_case.ex  conn_case.ex
test/whatAmonth_web/controllers/: page_controller_test.exs
test/whatAmonth_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
