load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

npm_link_package(
    name = "node_modules/@month/utils",
    src = "//assets/js/utils:package",
    root_package = "",
    visibility = ["//:__subpackages__"],
)
npm_link_package(
    name = "node_modules/@month/tetris",
    src = "//assets/js/tetris:package",
    root_package = "",
    visibility = ["//:__subpackages__"],
)
npm_link_package(
    name = "node_modules/@month/tennis",
    src = "//assets/js/tennis:package",
    root_package = "",
    visibility = ["//:__subpackages__"],
)
npm_link_package(
    name = "node_modules/@month/snowflake",
    src = "//assets/js/snowflake:package",
    root_package = "",
    visibility = ["//:__subpackages__"],
)

package(default_visibility = ["//visibility:public"])
