[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
log = "0.4.17"
actix-files = "0.6.0"
rand = "0.8.5"
base64 = "0.13.0"
chrono = "0.4.23"
slug = "0.1.4"
env_logger="0.10.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
actix-web-actors = "4.2.0"
actix = "0.13.1"

[dependencies.rusqlite]
version= "0.28.0"
features = ["bundled"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.tera]
version = "1.15.0"
default-features = false

[registries.crates-io]
protocol = "sparse"

[package.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This can either be a relative path (e.g. "foo/bar"), relative to this
# Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//cargo"

# This causes aliases for dependencies to be rendered in the BUILD
# file located next to this `Cargo.toml` file.
package_aliases_dir = "."

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"
