[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.9.0"
log = "0.4.17"
actix-files = "0.6.0"
rand = "0.8.5"
base64 = "0.13.0"
chrono = "0.4.23"
slug = "0.1.4"
env_logger="0.10.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
actix-web-actors = "4.2.0"
actix = "0.13.1"
serde_json = "1.0.114"
actix-multipart = "0.6.1"
futures-util = "0.3.30"
actix-web-grants = "4.1.0"

[dependencies.awc] 
version = "3.5.1"
features = ["rustls"]


[dependencies.rusqlite]
version= "0.28.0"
features = ["bundled", "blob"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.tera]
version = "1.15.0"
default-features = false
