load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project", "ts_config")

package(default_visibility = ["//visibility:public"])

exports_files([".swcrc"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_project(
    name = "lib",
    srcs = ["app.ts"],
    declaration = True,
    deps = [
        "//:node_modules/@month/snowflake",
        "//:node_modules/@month/tetris",
        "//:node_modules/@month/tennis",
    ],
)

esbuild(
    name = "tennis",
    entry_point = "tennis.ts",
    metafile = False,
    minify = True,
    target = "esnext",
    sourcemap = False,
    deps = [
        ":lib",
    ],
)

esbuild(
    name = "snowflake",
    entry_point = "snowflake.ts",
    metafile = False,
    minify = True,
    target = "esnext",
    sourcemap = False,
    deps = [
        ":lib",
    ],
)

esbuild(
    name = "tetris",
    entry_point = "tetris.ts",
    metafile = False,
    minify = True,
    target = "esnext",
    sourcemap = False,
    deps = [
        ":lib",
    ],
)

filegroup(
    name = "metrika",
    srcs = ["mc.js"],
)
