load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//:__subpackages__"])


ts_project(
    name = "lib",
    srcs = glob(["*.ts"]),
    declaration = True,
    tsconfig = "//assets/js:tsconfig",
    deps = [
        "//:node_modules/@month/utils",
    ],
)

npm_package(
    name = "package",
    srcs = [
        ":lib",
    ],
    package = "@month/snowflake",
    visibility = ["//:__subpackages__"],
)
