load("@aspect_rules_ts//ts:defs.bzl", "ts_project", "ts_config")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

package(default_visibility = ["//:__subpackages__"])

ts_project(
    name = "lib",
    srcs = glob(["*.ts"]),
    tsconfig = "//assets/js:tsconfig",
    declaration = True,
)
npm_package(
    name = "package",
    srcs = [
        ":lib",
    ],
    package = "@month/utils",
    visibility = ["//:__subpackages__"],
)
