load("@npm//@bazel/typescript:index.bzl", "ts_project", "ts_config")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library") 


_TSCONFIG = {
    "compilerOptions": {},
}
package(default_visibility = ["//:__subpackages__"])

ts_project(
    name = "lib",
    srcs = glob(["*.ts"]),
    extends = "//:baseTsconfig",
    tsconfig = _TSCONFIG,
    declaration = True,
    deps = [
        "@npm//@types/node",
    ],
)

js_library(
    name = "package",
    package_name = "@month/utils",
    deps = [":lib"],
)